# decisionapp

./: README.md  decision-pipeline.yaml  deployment-app-decision.yaml
.github/workflows/: docker-image.yml
app-decision/: Dockerfile  README.md  app.py  publish.sh  pyproject.toml  test_app.py
